src/test/ui/rfc-2126-crate-paths/crate-path-non-absolute.stderr
error[E0433]: failed to resolve. Could not find `crate` in `m`
  --> $DIR/crate-path-non-absolute.rs:17:22
   |
LL |         let s = ::m::crate::S; //~ ERROR failed to resolve
   |                      ^^^^^ Could not find `crate` in `m`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
